src/main/java/com/ht/test/error/ErrorResponse.java
package com.ht.test.error;

public class ErrorResponse {
	private HTError error;

	public HTError getError() {
		return error;
	}

	public void setError(HTError error) {
		this.error = error;
	}
}
